--- a/LyricAPISamanthaCress.ipynb
+++ b/LyricAPISamanthaCress.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for songs by The Ranconteurs...\n",
+      "\n",
+      "Changing artist name to 'The Raconteurs'\n",
+      "Song 1: \"Steady, as She Goes\"\n",
+      "\n",
+      "Reached user-specified song limit (1).\n",
+      "Done. Found 1 songs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "artist = genius.search_artist(\"The Ranconteurs\", max_songs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -242,98 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Carolina Drama Lyrics[Intro]\r\n",
-      "I'm not sure if there's a point to this story\r\n",
-      "But I'm going to tell it again\r\n",
-      "So many other people try to tell the tale\r\n",
-      "Not one of them knows the end\r\n",
-      "\r\n",
-      "[Verse 1]\r\n",
-      "It was a junk house in South Carolina\r\n",
-      "Held a boy the age of ten\r\n",
-      "Along with his older brother Billy\r\n",
-      "And their mother and her boyfriend\r\n",
-      "Who was a triple loser with some blue tattoos\r\n",
-      "That were given to him when he was young\r\n",
-      "And a drunk temper that was easy to lose\r\n",
-      "But thank God he didn't own a gun\r\n",
-      "\r\n",
-      "[Verse 2]\r\n",
-      "Well, Billy woke up in the back of his truck\r\n",
-      "Took a minute to open his eyes\r\n",
-      "He took a peep into the back of the house\r\n",
-      "And found himself a big surprise\r\n",
-      "He didn't see his brother, but there was his mother\r\n",
-      "With her red-headed head in her hands\r\n",
-      "While the boyfriend had his gloves wrapped around an old priest\r\n",
-      "Trying to choke the man\r\n",
-      "You might also like[Verse 3]\r\n",
-      "Billy looked up from the window to the truck\r\n",
-      "Threw up, and had to struggle to stand\r\n",
-      "He saw that red-necked bastard with a hammer\r\n",
-      "Turn the priest into a shell of a man\r\n",
-      "The priest was putting up the fight of his life\r\n",
-      "But he was old and he was bound to lose\r\n",
-      "The boyfriend hit as hard as he could\r\n",
-      "And knocked the priest right down to his shoes\r\n",
-      "\r\n",
-      "[Verse 4]\r\n",
-      "Well, now Billy knew but never actually met\r\n",
-      "The preacher lying there in the room\r\n",
-      "He heard himself say, \"That must be my daddy\"\r\n",
-      "Then he knew what he was gonna do\r\n",
-      "Billy got up enough courage, took it up\r\n",
-      "And grabbed the first blunt thing he could find\r\n",
-      "It was a cold, glass bottle of milk\r\n",
-      "That got delivered every morning at nine\r\n",
-      "\r\n",
-      "[Verse 5]\r\n",
-      "Billy broke in and saw the blood on the floor\r\n",
-      "And he turned around and put the lock on the door\r\n",
-      "He looked dead into the boyfriend's eye\r\n",
-      "His mother was a ghost, too upset to cry\r\n",
-      "Then he took a step toward the man on the ground\r\n",
-      "From his mouth trickled out a little audible sound\r\n",
-      "He heard the boyfriend shout, \"Get out!\"\r\n",
-      "And Billy said, \"Not 'til I know what this is all about\"\r\n",
-      "\"Well, this preacher here was attacking your mama\"\r\n",
-      "But Billy knew just who was starting the drama\r\n",
-      "So Billy took dead aim at his face\r\n",
-      "And smashed the bottle on the man who left his dad in disgrace\r\n",
-      "And the white milk dripped down with the blood\r\n",
-      "And the boyfriend fell down dead for good\r\n",
-      "Right next to the preacher who was gasping for air\r\n",
-      "And Billy shouted, \"Daddy, why'd you have to come back here?\"\r\n",
-      "His mama reached behind the sugar and honey\r\n",
-      "And pulled out an envelope filled with money\r\n",
-      "\"Your daddy gave us this,\" she collapsed in tears\r\n",
-      "\"He's been paying all the bills for years\"\r\n",
-      "\"Mama, let's put this body underneath the trees\r\n",
-      "And put daddy in the truck and head to Tennessee\"\r\n",
-      "Just then his little brother came in\r\n",
-      "Holding the milk man's hat and a bottle of gin\r\n",
-      "[Bridge]\r\n",
-      "Singing; la la la la, la la la la, yeah\r\n",
-      "La la la la, la la la la, yeah\r\n",
-      "La la la la, la la la la, yeah\r\n",
-      "La la la, la la la...\r\n",
-      "La la la la, la la la la, yeah\r\n",
-      "La la la la, la la la la, yeah\r\n",
-      "La la la la, la la la la, yeah\r\n",
-      "La la la, la la la...\r\n",
-      "\r\n",
-      "[Outro]\r\n",
-      "Well now you heard another side to the story\r\n",
-      "But you wanna know how it ends?\r\n",
-      "If you must know the truth about the tale\r\n",
-      "Go and ask the milkman5Embed\n"
+      "{'Carolina Drama Lyrics[Intro]\\nI\\'m not sure if there\\'s a point to this story\\nBut I\\'m going to tell it again\\nSo many other people try to tell the tale\\nNot one of them knows the end\\n\\n[Verse 1]\\nIt was a junk house in South Carolina\\nHeld a boy the age of ten\\nAlong with his older brother Billy\\nAnd their mother and her boyfriend\\nWho was a triple loser with some blue tattoos\\nThat were given to him when he was young\\nAnd a drunk temper that was easy to lose\\nBut thank God he didn\\'t own a gun\\n\\n[Verse 2]\\nWell, Billy woke up in the back of his truck\\nTook a minute to open his eyes\\nHe took a peep into the back of the house\\nAnd found himself a big surprise\\nHe didn\\'t see his brother, but there was his mother\\nWith her red-headed head in her hands\\nWhile the boyfriend had his gloves wrapped around an old priest\\nTrying to choke the man\\nYou might also like[Verse 3]\\nBilly looked up from the window to the truck\\nThrew up, and had to struggle to stand\\nHe saw that red-necked bastard with a hammer\\nTurn the priest into a shell of a man\\nThe priest was putting up the fight of his life\\nBut he was old and he was bound to lose\\nThe boyfriend hit as hard as he could\\nAnd knocked the priest right down to his shoes\\n\\n[Verse 4]\\nWell, now Billy knew but never actually met\\nThe preacher lying there in the room\\nHe heard himself say, \"That must be my daddy\"\\nThen he knew what he was gonna do\\nBilly got up enough courage, took it up\\nAnd grabbed the first blunt thing he could find\\nIt was a cold, glass bottle of milk\\nThat got delivered every morning at nine\\n\\n[Verse 5]\\nBilly broke in and saw the blood on the floor\\nAnd he turned around and put the lock on the door\\nHe looked dead into the boyfriend\\'s eye\\nHis mother was a ghost, too upset to cry\\nThen he took a step toward the man on the ground\\nFrom his mouth trickled out a little audible sound\\nHe heard the boyfriend shout, \"Get out!\"\\nAnd Billy said, \"Not \\'til I know what this is all about\"\\n\"Well, this preacher here was attacking your mama\"\\nBut Billy knew just who was starting the drama\\nSo Billy took dead aim at his face\\nAnd smashed the bottle on the man who left his dad in disgrace\\nAnd the white milk dripped down with the blood\\nAnd the boyfriend fell down dead for good\\nRight next to the preacher who was gasping for air\\nAnd Billy shouted, \"Daddy, why\\'d you have to come back here?\"\\nHis mama reached behind the sugar and honey\\nAnd pulled out an envelope filled with money\\n\"Your daddy gave us this,\" she collapsed in tears\\n\"He\\'s been paying all the bills for years\"\\n\"Mama, let\\'s put this body underneath the trees\\nAnd put daddy in the truck and head to Tennessee\"\\nJust then his little brother came in\\nHolding the milk man\\'s hat and a bottle of gin\\n[Bridge]\\nSinging': None, ' la la la la, la la la la, yeah\\nLa la la la, la la la la, yeah\\nLa la la la, la la la la, yeah\\nLa la la, la la la...\\nLa la la la, la la la la, yeah\\nLa la la la, la la la la, yeah\\nLa la la la, la la la la, yeah\\nLa la la, la la la...\\n\\n[Outro]\\nWell now you heard another side to the story\\nBut you wanna know how it ends?\\nIf you must know the truth about the tale\\nGo and ask the milkman5Embed': None}\n"
      ]
     }
    ],
@@ -348,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +317,7 @@
     }
    ],
    "source": [
-    "text = open('CarolinaDrama.json')\n",
+    "text = open('Carolina Drama.json')\n",
     "text = text.read()\n",
     "blob = TextBlob(text)\n",
     "print('Carolina Drama:', blob.polarity)\n",
@@ -636,17 +575,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attention: 0.12916666666666662\n",
-      "Bang Bang: -0.5170940170940171\n",
-      "Blue Veins: 0.11197916666666667\n",
-      "Bored and Razed: -0.1696969696969697\n"
+      "Attention: 0.4416666666666667\n",
+      "Bang Bang: -0.2972222222222222\n",
+      "Blue Veins: 0.1585227272727273\n",
+      "Bored and Razed: -0.07809523809523809\n"
      ]
     }
    ],
@@ -673,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I would like to note I had to go in a manually edit the json files I created, as when they are first created they contain a ton of information not relevant to the lyrics of the songs. I would say that the polarity of most of these songs matches my understanding of the lyrics. Attention is a more upbeat song where as bang bang is a slower darker songs (bang bang is especially dark).I would say that the polarity calculated is quite accurate. Bored and Razed surpised me a bit, it is upbeat but looking back on the lyrics now it makes sense the polarity is low. The word bored is used a lot so that probably adds to the low polarity. Blue veins also suprised me, the song actually sounds super sad but reading the lyrics is actually about loving someone (I had to go back and look after seeing the polarity score). Lastly I would like to note, the numbers are also probably a bit off due to some of the information in the json file still not relating to the lyrics. "
+    "I would like to note I had to go in a manually edit the json files I created, as when they are first created they contain a ton of information not relevant to the lyrics of the songs. I would say that the polarity of most of these songs matches my understanding of the lyrics. Attention is a more upbeat song where as bang bang is a slower darker song (bang bang is especially dark).I would say that the polarity calculated is quite accurate. Bored and Razed surpised me a bit, it is upbeat but looking back on the lyrics now it makes sense the polarity is low. The word bored is used a lot so that probably adds to the low polarity. Blue veins also suprised me, the song actually sounds super sad but reading the lyrics is actually about loving someone (I had to go back and look after seeing the polarity score)."
    ]
   },
   {
@@ -689,13 +628,6 @@
    "source": [
     "github url: https://github.com/SamCress96/620-Mod4"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
