--- a/LyricAPISamanthaCress.ipynb
+++ b/LyricAPISamanthaCress.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "github url: https://github.com/SamCress96/620-Mod4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Web Mining and Applied NLP (44-620)\n",
     "\n",
     "## Requests, JSON, and NLP\n",
